# Free_kick

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
Free-kick-simulator/: PAPERS.md  README.md
Free-kick-simulator/01_KickSimulator/: Vector.h  generate_free_kick_waypoints.h
Free-kick-simulator/02_Raytracing/: Makefile  README.md  document.md  main  main.cpp  paragraph.txt  profile.txt
